--- a/Software/NodeMCU_Weather_Station.vcxproj.filters
+++ b/Software/NodeMCU_Weather_Station.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClInclude Include="__vm\.NodeMCU_Weather_Station.vsarduino.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="__vm\.Software.vsarduino.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
